<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/tv_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/row_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/clear_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/positive_negative_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/positive_negative_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="moduloEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/percent_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="operatorEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/divide_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="numberEvent"
                android:text="@string/seven_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/eight_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/nine_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="operatorEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/multiply_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/four_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/five_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/six_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="operatorEvent"
                android:text="@string/minus_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/one_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/two_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/three_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="operatorEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/plus_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="numberEvent"
                android:text="@string/zero_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decimal_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="numberEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/decimal_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="equalEvent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/equal_btn_string"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyTheme.Image" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>